js/js.translator/testData/incremental/invalidation/typeScriptExportsPerFile/lib1/l1.2.d.ts
type Nullable<T> = T | null | undefined
export declare function bar(): number;